# training_cpp

assessments/cppbasics/: cppbasics.sln  cppbasics.vcxproj  cppbasics.vcxproj.filters  prg01.cpp  prg02.cpp  prg03.cpp  prg04.cpp  prg05.cpp  prg06.cpp  prg07.cpp  prg08.cpp  prg09.cpp  prg10.cpp  prg11.cpp  prg12.cpp  prg13.cpp  prg14.cpp  prg15.cpp  prg16.cpp  prg17.cpp  prg18.cpp  prg19.cpp  prg20.cpp  prg21.cpp  prg22.cpp  prg23.cpp  prg24.cpp  prg25.cpp  prg26.cpp  prg27.cpp  prg28.cpp  prg29.cpp  prg30.cpp  prg31.cpp  prg32.cpp  prg33.cpp  prg34.cpp  prg35.cpp  prg36.cpp  prg37.cpp  (+33 more)
assessments/day20/: New Text Document.txt  README.md  day20.sln  day20.vcxproj  day20.vcxproj.filters  functions.cpp  functions_required.cpp  libmgt.h  (+3 more)
practice_qs/: CI_CD_Cpp_Windows_FullGuide.pptx
practice_qs/gw_trial/: CMakeLists.txt  Readme.md  gw_trial.sln  gw_trial.vcxproj  gw_trial.vcxproj.filters  m1.md  m2.md  m3_worlload.md  m4_runtime.md  m5modulejob.md  m6worktobedone  main.cpp
practice_qs/gw_trial/gw_basic/: GWBasic64.cpp  GWBasic64.h
practice_qs/gw_trial/gw_basic/Errors/: ErrorHandler.cpp  ErrorHandler.h
practice_qs/gw_trial/gw_basic/Lexer/: Lexer.cpp  Lexer.h
practice_qs/gw_trial/gw_basic/Parser/: Parser.cpp  Parser.h
practice_qs/gw_trial/gw_basic/ProgramInterface/: CommandLineEditor.cpp  CommandLineEditor.h
practice_qs/gw_trial/gw_basic/Runtime/: StatementExecutor.cpp  StatementExecutor.h
practice_qs/gw_trial/gw_basic/Storage/: ProgramMemory.cpp  ProgramMemory.h
practice_qs/gw_trial/gw_basic/Utils/: ASTNode.h
practice_qs/gw_trial/tests/: test_main.cpp
(+783 files in other folders)
